# skills

./: .gitignore  README.md  SKILL-GUIDE.md  SKILL.md  db_config.json
.claude/commands/: template-filler.md
.obsidian/: workspace.json
db-mcp/: README.md  SKILL.md  pyproject.toml
db-mcp/docs/: IMPLEMENTATION_SUMMARY.md
db-mcp/references/: db_config.example.json  mcp-tools.md  requirements-core.txt  requirements-mysql.txt  requirements-postgresql.txt
db-mcp/scripts/: check_mcp.py  config.py  connection.py  diagnostics.py  ensure_dependencies.py  install_mcp.py  server.py  tools.py  validate_config.py
dev-workflow/: SKILL.md
dev-workflow/references/: ai-checklist.md  anti-patterns.md  checklist.md  conversation-examples.md  decision-tree.md  doc-generation-guide.md  full-spec.md  git-integration.md  operational-guide.md  quality-gates.md  quick-reference.md  templates.md  tools.md
doc2md/: .gitignore  LICENSE  README.md  SKILL.md  doc2md.bat  doc2md.sh  metadata.json
doc2md/examples/: README.md
doc2md/references/: ai-quick-reference.md  installation.md  portable.md  scenarios.md  troubleshooting.md  usage.md
doc2md/scripts/: converter.py  mineru_converter.py  (+2 more)
feedback/: SKILL.md
knowledge-index/: SKILL.md  UPDATE-NOTES.md
md2slides/: SKILL.md
obsidian-slides/: SKILL.md
references/: config-format.md  install_config.json  requirements.txt
scripts/: config.py  db-mcp.py  resources.py  server.py
socrates/: SKILL.md
standards/: skill-guide.md
task-stack/: SKILL.md
template-filler/: SKILL.md
viz3d/: .gitignore  SKILL.md
(+156 files in other folders)
