[project]
name = "portable-chatbi-mcp"
version = "1.0.0"
description = "便携式 ChatBI MCP 服务器 - 支持 MySQL、PostgreSQL 和 SQLite 的数据库查询工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ChatBI Team"}
]
keywords = ["mcp", "database", "mysql", "postgresql", "sqlite", "analytics", "chatbi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "fastmcp<3",
]

[project.optional-dependencies]
mysql = [
    "mysql-connector-python>=8.0.30",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
all = [
    "portable-chatbi-mcp[mysql,postgresql]",
]

[project.scripts]
chatbi-mcp = "scripts.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
